# SF_PCS26

esercitazione1/: CMakeLists.txt  pr1.cpp  pr2  pr2.cpp
esercitazione2/: CMakeLists.txt  memoria_oggetti  memoria_oggetti.cpp  primi_algoritmi.cpp
esercitazione3/: CMakeLists.txt  classe_rational.cpp  classe_rational.hpp
esercitazione4/: CMakeLists.txt  ord.h  tempo_ord.cpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
